--- a/config.yml
+++ b/config.yml
@@ -111,6 +111,11 @@ params:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/AIjack?color=green"
                   - url: "https://badgen.net/github/forks/Koukyosyumei/AIjack"
               description: "AIJack is an easy-to-use open-source simulation tool for testing the security of your AI system against hijackers. It provides advanced security techniques like Differential Privacy, Homomorphic Encryption, K-anonymity, Debugging, and Federated Learning to guarantee protection for your AI. With AIJack, you can test and simulate defenses against attacks such as Evasion, Poisoning, Model Inversion, Backdoor, and Free-Rider. AIJack also provides a simple DBMS for SQL-based methods."
+            - title: rhoevm
+              url: https://github.com/Koukyosyumei/rhoevm
+              badges:
+                  - url: "https://badgen.net/github/stars/Koukyosyumei/rhoevm?color=green"
+              description: Symbolic EVM execution engine written in Rust to find vulnerabilities within Ethereum smart contracts
             - title: Gymbo
               url: https://github.com/Koukyosyumei/Gymbo
               badges:
