--- a/config.yml
+++ b/config.yml
@@ -110,17 +110,17 @@ params:
               badges:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/AIjack?color=green"
                   - url: "https://badgen.net/github/forks/Koukyosyumei/AIjack"
-              description: "AIJack is an easy-to-use open-source simulation tool for testing the security of your AI system against hijackers. It provides advanced security techniques like Differential Privacy, Homomorphic Encryption, K-anonymity, Debugging, and Federated Learning to guarantee protection for your AI. With AIJack, you can test and simulate defenses against attacks such as Evasion, Poisoning, Model Inversion, Backdoor, and Free-Rider. AIJack also provides a simple DBMS for SQL-based methods."
+              description: "Security risk simulator for machine learning (more than 300 stars on GitHub and used in 8 papers)"
             - title: rhoevm
               url: https://github.com/Koukyosyumei/rhoevm
               badges:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/rhoevm?color=green"
-              description: Symbolic EVM execution engine written in Rust to find vulnerabilities within Ethereum smart contracts
+              description: "Symbolic EVM execution engine written in Rust to find vulnerabilities within Ethereum smart contracts"
             - title: Gymbo
               url: https://github.com/Koukyosyumei/Gymbo
               badges:
                   - url: "https://badgen.net/github/stars/Koukyosyumei/Gymbo?color=green"                
-              description: Gymbo is a Proof of Concept for a Gradient-based Symbolic Execution Engine implemented from scratch. Building on recent advancements that utilize gradient descent to solve SMT formulas, Gymbo leverages gradient descent to discover input values that fulfill each path constraint during symbolic execution.  
+              description: "Symbolic execution engine using gradient descent to solve path constraints"  
             - title: "My*"
               description: This series aims to implement various algorithms, compiliers and solvers from scratch.
               subprojects:
