--- a/config.yml
+++ b/config.yml
@@ -83,29 +83,29 @@ params:
             - title: "On the Transit Obfuscation Problem."
               venue: "AAMAS'24"
               url: https://arxiv.org/pdf/2402.07420.pdf
-              authors: "Hideaki Takahashi*, Alex Fukunaga"
+              authors: "<u>Hideaki Takahashi*</u>, Alex Fukunaga"
               publisher: "Proceedings of the International Conference on Autonomous Agents and Multi-Agent Systems"
               date: "2024"
             - title: "VFLAIR, A Research Library and Benchmark for Vertical Federated Learning."
               venue: "ICLR'24"
               url: https://arxiv.org/pdf/2310.09827.pdf
-              authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, Hideaki Takahashi, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
+              authors: "Zou, Tianyuan, Zixuan Gu, Yuanqin He, <u>Hideaki Takahashi</u>, Yang Liu, Guangnan Ye and Ya-Qin Zhang"
               publisher: "Proceedings of the International Conference on Learning Representations"
               date: "2024"
             - title: "Breaching FedMD, Image Recovery via Paired-Logits Inversion Attack."
               venue: "CVPR'23"
               url: https://arxiv.org/pdf/2304.11436.pdf
-              authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu."
+              authors: "<u>Hideaki Takahashi*</u>, Jingjing Liu, and Yang Liu."
               publisher: "Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition"
               date: "2023"
           preprints:
             - title: "Eliminating Label Leakage in Tree‑based Vertical Federated Learning. arXiv:2307.10318"
               url: https://arxiv.org/pdf/2307.10318.pdf
-              authors: "Hideaki Takahashi*, Jingjing Liu, and Yang Liu"
+              authors: "<u>Hideaki Takahashi*</u>, Jingjing Liu, and Yang Liu"
               date: "2023"
             - title: "Difficulty of Detecting Overstated Dataset Size in Federated Learning. Technical Report of DPS, 10, Information Processing Society of Japan."
               url: http://id.nii.ac.jp/1001/00214220/
-              authors: "Hideaki Takahashi*, Kohei Ichikawa, and Keichi Takahashi"
+              authors: "<u>Hideaki Takahashi*</u>, Kohei Ichikawa, and Keichi Takahashi"
               date: "2021"
           softwares:
             - title: AIJack
