--- a/config.yml
+++ b/config.yml
@@ -155,7 +155,7 @@ params:
           industry:
             - title: Apple Inc.
               role: "Technical Internship: AIML/Software Engineer"
-              date: "Feb. 2024 - present"
+              date: "Feb. 2024 - Jul. 2024"
               description: "Working on AIML/software engineering."
             - title: UTokyo Economic Consulting Inc.
               role: Research Assistant
